add is_open_sunday and is_open_holiday
